# jujube

./: CMakeLists.txt  Makefile  README.md  base.c  buf.c  buf.h  client.c  comm.c  comm.h  connection.c  connection.h  event.c  event.h  ip.c  ip.h  list.h  mem.c  mem.h  nglog_log_entry.h  server.c  stream.c  stream.h
bench/: nginx.conf  pingpong.diff  qps.diff
